# about-me

./: MANIFEST.in  README.md  pyproject.toml  setup.py
aboutme/: __init__.py  finger_art.txt  main.py
assets/: finger_map.txt
scripts/: generate_finger_map.py
