[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janarun"
version = "0.1.0"
description = "A terminal utility."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
  { name = "Jana" }
]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]

[project.scripts]
janarun = "aboutme.main:run"

[tool.setuptools]
packages = ["aboutme"]
include-package-data = true

[tool.setuptools.package-data]
aboutme = ["finger_map.txt", "finger_art.txt"]
